image loading issue asolved

--- a/app/components/About.module.css
+++ b/app/components/About.module.css
@@ -78,7 +78,7 @@
   width: 100%;
   height: 600px;
   max-width: 600px;
-  background-image: url('/aboutImage.png');
+  background-image: url('/aboutimage.png');
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
